・低凝集、開発プロセスまとめ

--- a/Article/メモ.md
+++ b/Article/メモ.md
@@ -77,6 +77,17 @@
 
 ---
 
+>設計書って２種類あんねん。  
+>モノを作るための一時的な設計書と、仕様を残すための永続的な設計書。  
+>両方をごちゃまぜにして語っても一生わかり合えないのよ。  
+><https://twitter.com/HAL1986____/status/1615146621125414914>  
+
+<!--  -->
+>厳密に性質を言語化すると、前者が「指示書（direction）」で、後者が「説明書（description）」なんですよねえ。  
+>内容が似ることはあるけど、目的が違う。  
+
+---
+
 ## Turing.comからのオファー
 
 転職活動でgithubを公開したタイミングでこのメールが来た。  
