--- a/GoodCode,BadCode/1.悪しき構造の弊害を知覚する.md
+++ b/GoodCode,BadCode/1.悪しき構造の弊害を知覚する.md
@@ -189,7 +189,7 @@ MessageManager --> ContractAmount
 このような事態はデータを保持するクラスとデータを使って計算するロジックが離れている時に頻発する。  
 データと計算ロジックがそれぞれの箇所に実装されているため、計算ロジックが複数実装されていても認知が難しい。  
 
-このように関連するデータやロジックどうしが分散し、バラバラになっているのを**低凝縮**と呼ぶ。  
+このように関連するデータやロジックどうしが分散し、バラバラになっているのを**低凝集**と呼ぶ。  
 
 ---
 
