--- a/GoodCode,BadCode/12.関数.md
+++ b/GoodCode,BadCode/12.関数.md
@@ -20,7 +20,7 @@ class  ActorManage{
 ```
 
 リスト5.4のように、他のクラスのインスタンス変数を変更するメソッド構造にしてはいけない。  
-低凝縮に陥ってしまう。  
+低凝集に陥ってしまう。  
 
 他のクラスのインスタンス変数を変更するメソッドを書きたくなった場合、変更したいインスタンス変数を持つクラスに変更メソッドを実装すべし。  
 
@@ -39,7 +39,7 @@ class  ActorManage{
 
 ## 12.3 尋ねるな、命じろ
 
-5.6の`equipArmor`メソッドのように、あるクラスがよそのクラスの状態を判断したり、状態に応じて、よその値を変更したりする、「よそのクラスを気にしたりいじったりするメソッド構造」は低凝縮構造となる。  
+5.6の`equipArmor`メソッドのように、あるクラスがよそのクラスの状態を判断したり、状態に応じて、よその値を変更したりする、「よそのクラスを気にしたりいじったりするメソッド構造」は低凝集構造となる。  
 
 getter/setterは「よそのクラスを気にしたりいじったりするメソッド構造」に陥りやすく、開発生産性がよくないソフトウェアのソースコードでは頻繁に見受けられる。  
 
@@ -137,7 +137,7 @@ nullを渡さない設計にするためには、nullに意味を持たせない
 
 ### 12.5.4 出力引数は使わない
 
-5.4のように、出力引数を使うと低凝縮構造に陥る。  
+5.4のように、出力引数を使うと低凝集構造に陥る。  
 引数は入力値として用いるのが基本。  
 出力値として用いると読み手が混乱する。  
 
@@ -325,6 +325,6 @@ class Location {
 ### static メソッドの扱いに注意
 
 staticメソッドは、自身のクラスのインスタンス変数操作できない(5.1)。  
-データとデータを操作するロジックがバラバラになり、低凝縮の原因になりがち。  
+データとデータを操作するロジックがバラバラになり、低凝集の原因になりがち。  
 
-staticメソッドの仕様は、ファクトリメソッド(5.2.1)や、横断的関心毎(5.3.3)など、低凝縮の心配がないケースに限定すべし。  
+staticメソッドの仕様は、ファクトリメソッド(5.2.1)や、横断的関心毎(5.3.3)など、低凝集の心配がないケースに限定すべし。  
