--- a/GoodCode,BadCode/16.設計を妨げる開発プロセスとの戦い.md
+++ b/GoodCode,BadCode/16.設計を妨げる開発プロセスとの戦い.md
@@ -1,1 +1,400 @@
 # 16. 設計を妨げる開発プロセスとの戦い
+
+レガシーコードが書かれてしまうのは、問題を抱えた開発プロセスが背景にあることが多い。  
+この章では、設計品質を貶めてしまう開発プロセスの問題をとりあげる。  
+問題はスキル不足以外に心理的要因やコミュニケーション要因、組織的要因など様々。  
+
+---
+---
+
+## 16.1 コミュニケーション
+
+### 16.1.1 コミュニケーションが希薄だと設計品質に問題が生じる
+
+すぐ隣同士のメンバーが全く同じコードを書いている。  
+お互いのロジックがうまく嚙み合わずバグ化するといった事象が、チーム開発では度々見受けられる。  
+
+こうした事象はなぜ引き起こされるのか？  
+それは、お互いに何をやっているのかわからないから。  
+なぜわからないのか？  
+メンバー同士のコミュニケーションが希薄だから。  
+
+忙しかったり、メンバー同氏の関係がうまくいっていなかったり、情報も目線があっていなかったり、コミュニケーションを阻害する様々な原因が考えられる。  
+メンバーどうしのコミュニケーションに問題があると、バグが増大する傾向にある。  
+
+### 16.1.2 コンウェイの法則
+
+コミュニケーションの問題解決にあたり、コンウェイの法則を紹介する。  
+
+**コンウェイの法則**は「システムの構造が、それを設計する組織構造に似てくる」という法則。  
+
+もっと平たく言うと、例えば開発部門が3チームに分かれているとしたら、チームと同じ数のモジュール、3個から構成されるシステムが出来上がる、ということ。  
+
+なぜこうなるのか。  
+複数のチームを編成すると、各チーム内のコミュニケーションは密になる。  
+一方、チームがいとのコミュニケーションは疎になる。  
+機能リリースの都合を考えた場合、チーム外と歩調を合わせるより、チーム内で完結したほうがリリースしやすくなる。  
+そのため、リリース機能の粒度はチームの粒度に近づいていく。  
+こうしてシステム構造がリリース単位、すなわちチーム単位の構造になっていく。  
+
+コンウェイの法則はコミュニケーションコスト構造の法則ともとらえられる。  
+チーム内はコミュニケーションコストが低い、チーム外とはコミュニケーションコストが高い、といったコスト構造がシステム構造に影響してしまうため。  
+
+つまり、あるべきシステム構造と組織構造に違いがあると、あるべきシステム構造を作り上げるのが困難になってしまう。  
+
+そこで近年では、コンウェイの法則を逆手に取った**逆コンウェイ作戦**が考案されている。  
+それは、ソフトウェアとしてあるべき構造を先に設計し、それからソフトウェア構造に最適な組織編成をする作戦。  
+
+しかし、逆コンウェイ作戦を表面的になぞるだけでは、うまくいかないと考える。  
+メンバーどうしのコミュニケーションに課題があると、隣同士なのに同じコードを書いたり、お互いに嚙み合わないロジックを書いたりしてしまいがち。  
+コンウェイの法則はコミュニケーションコスト構造の法則。  
+つまり、メンバー間のコミュニケーションの問題は、メンバー間でのコミュニケーションコストが高いと言える。  
+逆コンウェイ作戦でチーム編成しても、チーム内の関係性に問題がある場合、本質的な構造課題の解決にならない。  
+
+---
+
+### 16.1.3 心理的安全性
+
+チームメンバーとの関係改善には、心理的安全性の向上が不可欠。  
+
+**心理的安全性**とは、「自分が発言することを恥じたり、拒絶されるなど、不利益を被ることがないことをチームで教諭されている心理状態」や「安心して自由に発言したり、行動できる状態」という定義がなされている。  
+1999年にハーバード大学で提唱され、2012年にGoogle社の労働改革プロジェクトにて採用されたことから脚光を浴びた概念。  
+心理的安全性は、成功に導くチームを構築する上で重要と言われている。  
+
+意見や提案をする上で、冷笑されたり、煙たがられたり、聞く耳を持たれない状態では、情報共有がうまくいかない。  
+ましてチーム単位での設計品質向上はとても難しくなることだろう。  
+
+コミュニケーションに課題がある時、まずは心理的安全性の向上に努めるべし。  
+
+---
+---
+
+## 16.2 設計
+
+---
+---
+
+## 16.3 実装
+
+---
+---
+
+## 16.4 レビュー
+
+レビュー時に注意すべき点や工夫の仕方をまとめる。  
+
+---
+
+### 16.4.1 コードレビューを仕組化しよう
+
+レガシーコードが書かれる現場では、コードレビューの習慣がない場合が多い。  
+とりあえず動作するだけの雑なコードが誰のチェックも通らず、次々にマージされていく。  
+
+品質が良くないため、バグが頻発することになる。  
+バグに対して付け焼き刃的な修正がなされるが、得てして根本原因の解決にはなっておらず、何度も同じバグが発生したり、バグ修正が原因で別の箇所がバグ化したりする。  
+
+GitHubでは、他のメンバーからApprove(承認)されたPullRequestのみマージ可能な仕組みを利用できる。  
+他にもコード品質の解析やユニットテストとの連携、自動実行などCI機能が充実しているので利用すべし。  
+
+PullRequestしたコードには、コードの歴史や経緯を知っている人や、設計に詳しい人をレビュアーとしてアサインすべし。  
+PullRequest作成時のテンプレートテキストには、レビュー観点を盛り込むべし。  
+ボーイスカウト規則のチェック項目を設けたり、設計ルールへのリンクを張ったりするのも良いだろう。  
+
+---
+
+### 16.4.2 コードを設計視点でレビューしよう
+
+コードレビューは「ロジックが機能要件を満足しているかどうか」や「欠陥の有無」、「コーディングスタイルをレビューするもの」として広く認知されている模様。  
+しかし、むしろ**設計的な妥当性に重点をおいてレビューすべき**である、と筆者は言っている。  
+
+解説してきたように、設計品質はコード1つ1つに現れる。  
+上げてきた設計観点と照らし合わせながらレビューすべし。  
+
+---
+
+### 16.4.3 敬意と礼儀
+
+コードレビューにおいて、技術的な正しさをかさに来て、攻撃的なコメントを寄せる人がいる。  
+攻撃的なコメントは、どんなに正しい内容であれ許されない。  
+こうしたレビューは人格を傷つけ、生産性を低下させ、コードを良くするという本来の目標を阻害する。  
+
+コードレビューで最重要なのは、敬意と礼儀となる。  
+レビューを受ける側への敬意を第一に意識しよう。  
+技術的な正しさや有用性よりも、まずは共に働く、コードを書く仲間を尊重すること。  
+敬意と礼儀を意識しながら指摘することが、コード品質を高める最短経路。  
+
+GoogleのChromiumプロジェクトのレビュー方針、「経緯に満ちたコードレビュー」は以下の通り。  
+この方針は、すべきことといけないことを決めている。  
+
+|すべきこと|解説|
+|:-|:-|
+|能力と善意を想定する|開発者の十分な能力と善意を想定する。ミスは情報不足に起因するものだと考える|
+|会って話し合う|レビューツール上でのやり取りで意見がまとまらなければ、実際に話して意見を交換する|
+|理由を説明する|なぜ間違っているか、どういう変更が正しいかを説明する。「間違っています」だけでは相手に伝わらない。|
+|理由を効く|相手の意図が不明瞭な時は、遠慮せず変更理由を聞く。</br>やり取りを記録することで、将来的に変更の意図などがわかる。</dr>また、よりよい実装を考える機会にもなる。|
+|終わりを見つける|完璧に拘泥して徹底的なレビューを使用とすると、レビューされる側は疲弊する。「絶対に間違いないと保証する」ではなく、「よさそうです」でレビューを適切に終える|
+|適度な時間内に返信する|レビューをいつまでも放置しない。24時間以内に返信出来なければ、いつまでに返信できるかをコメントで残すなど、適切に対応する。|
+|ポジティブに述べる|「すべての欠点をみつけてやるぞ」という気持ちで臨まず、ポジティブな点を認める姿勢でレビューする。無理に褒める必要はないが、難しい仕事を引き受けてくれた人や、良い変更をしてくれた人に感謝する姿勢は大事。|
+
+|いけないこと|解説|
+|:-|:-|
+|人を貶めない|相手は最善を尽くしている事を前提にする。「なぜ気が付かなかった？」といった無意味なコメントをしない事|
+|極端な言葉やネガティブな表現を使わない|「まともな人間ならこうはしない」「ひどいアルゴリズムだ」といったネガティブな表現をレビュー時に使ってはいけない。</br>人を脅して思い通りに動かそう等と考えてはいけない。</br>人ではなく、コードについて議論すべし。|
+|ツールの使用を思いとどまらせない|コードフォーマッターなど自動化ツールを導入してくれたら、まずそのことに感謝する。ツールの是非やや好みを押し付けてはいけない。|
+|自転車置き場の議論をしない|どちらでもいいようなことについて、レビューで決着を付けようとしないこと。レビューの目的は「勝ち負け」ではない。|
+
+このレビュー指針は、多くをそのまま導入可能であるはず。  
+
+簡単な例を示す。  
+次の指定は技術的には正確かもしれないが、敬意と礼儀に欠ける。  
+
+>ここで○○メソッドは使わないでください。パフォーマンスが悪いです。こういう実装は何もいいことがありません。  
+
+この指摘は以下の指針に反している。  
+
+- 能力と善意を想定する  
+- 理由を説明する  
+- 人を貶めない  
+- 極端な言葉やネガティブな表現を使わない  
+
+これらを踏まえ、望ましい形に直す。  
+
+>動作しますし、十分いい変更です。ただ、パフォーマンスをもう少し改善したいです。○○メソッドでも実装出来ますが、□□メソッドのほうが実行速度で有利です。  
+
+相手を傷つけるかもしれない表現をしないように注意を払いましょう。  
+正しければ何を言ってもいいというのは、幼稚な考え方です。  
+
+---
+
+### 16.4.4 定期的に改善タスクを棚卸しすること
+
+実装やレビューの途中で良くないコードに気づく場合がある。  
+スケジュール的な問題により対処が難しいこともある。  
+こうした状況では「後で直しておこう」と後回しにされがち。  
+
+しかし、この手の欠陥は、なんら対策せずにいると放置され、修正されることはほぼない。  
+なぜなら次々に新しい業務をアサインされ、次のスケジュールで埋まってしまうから。  
+新しい仕事に忙殺され、結局は忘れ去られてしまう。  
+
+良くないコードへの対処は、タスク管理ツールに改善タスクとして積み上げておく事。  
+そして、定期的にタスクを棚卸して、確実に対処できるようにしておく。  
+
+例えば、週1回のチームミーティングで、今週取り組む改善タスクの話し合いを設けるのがいいだろう。  
+タスク管理には、GitHubのIssueを用いると良い。  
+ソースコードやPullRequestとの関連付けが便利。  
+
+---
+---
+
+## 16.5 チームの設計力を高める
+
+この章で取り上げた開発プロセスは、設計に理解を示すメンバーがチームにある程度いる前提の話だった。  
+チームによっては、設計に詳しいメンバーが誰もいない事もある。  
+そのような状況では、設計改善に取り組もうにも、殆どうまくいくことはない。  
+筆者もそうだった模様。  
+実際にあったやり取りが以下の通りなんだとか。  
+
+``` txt
+筆者  「この○○Managerの責務は何でしょうか」
+同僚A 「○○を管理するクラスです」
+筆者  「管理とは何でしょうか」
+同僚A 「管理は管理です」
+筆者  「管理が意味するところの具体的な内訳をお願いします」
+同僚A 「○○を登録したり、△△を転送したり、□□を切り替えたり」
+筆者  「それらはいずれも関心事が別ですよね。仕様変更時の課題になりそうなので、関心事それぞれのクラスに分解したほうが良いです」
+同僚A 「気にしすぎですよ、管理は管理でいいじゃないですか」
+```
+
+このようにレビューがまともに機能しないケースが往々にしてある。  
+レビューに限らず、設計や実装の改善提案も困難になる。  
+チーム全体の設計力が不足している場合、設計力を高めていくための活動が必要となる。  
+開発リソースを決める経営層を説得するのが一番のように思えるが、それはそれで非常に骨が折れる。  
+どうすれば良いか。  
+
+---
+
+### 16.5.1 影響力を持つレベルにまで仲間を集める
+
+あなたが品質のマズさに気づき、設計のテコ入れを考えたとする。  
+しかし、自分1人で品質向上活動をしてもなかなか効果は上がらない。  
+下手をすれば、「あいつは指示以外の何か余計なことをやっているようだぞ」と逆に目をつけられてしまうリスクが生じる。  
+
+設計に限った話ではないが、仕事のやり方をボトムアップで変えていくには周囲の協力が不可欠となる。  
+自分のチームや他の全てを巻き込めるに越したことはないが、中には考えが会わないメンバーがいるなど、多くを巻き込むのは至難の業となる。  
+
+なぜ協力が必要なのか？  
+それは仕事のやり方を変えるだけの影響力を持つためである。  
+まずは影響力を持てるだけの仲間を集めることが重要になる。  
+影響力を発揮できるのはどれくらいの規模なのか？  
+
+ランチェスターの法則と呼ばれる軍事理論がある。  
+これは戦闘力、および的に与える損害量定義した理論である。  
+このランチェスターの法則を応用したマーケットシェア理論は、市場占有率に基づいた競争理論である。  
+
+この理論で注目したいのが、市場占有率別の目標を定義したクープマン目標値である。  
+目標値の一つに、影響目標値がある。  
+これは「影響力を無視できない存在レベルであり、シェア争いに本格参入する目標値」とされている。  
+この目標値は10.9%と定義されている。  
+筆者は、この数値が現場の改善のために必要な人数の算出にも活かせると考えている。  
+
+この数値をエンジニアチームに当てはめて考えてみる。  
+仮にチームが20人であれば、2.18で約2人。50人であれば、5.45で約5人となる。  
+それほど多くはない。  
+チームが20人なら自分以外のもう1人を仲間に出来れば良いのだからなんだかいけそうな気がしないだろうか。  
+
+まずは気の合うメンバーに声をかけてみよう。  
+「最近の実装はどう？変更するのが結構大変だと思わない？」「変更後のデバッグが辛いよね」「ちゃんと設計したいよね」など、なんでもいいです。  
+悩みを打ち明けながら、協力してくれそうな仲間を増やしてみよう。  
+
+---
+
+### 16.5.2 基本はスモールステップ
+
+仲間が見つかると、もしかしたら本書に書かれている内容を一度に伝えてしまいたい衝動にかられるかもしれない。  
+しかし、焦りは禁物である。  
+人は一度に大量の情報を受け止めきれないし、大きな変化に対して不安や抵抗を覚える物である。  
+
+毎日少しずつ、スモールステップで設計の知識を共有していこう。  
+もちろん聞き手が食いつく、興味がありそうなら、より多くを共有して議論するのはありだろう。  
+
+---
+
+### 16.5.3 実感が大事、手を動かしてみよう
+
+仲間と設計の知識や認識をある程度共有できたら、一緒にクラスを設計、実装してコードレビューをしてみよう。  
+百聞は一見に如かずというように、物事のありさまは言葉を重ねるよりも実際に見たり実家したりする方が確かだ。  
+
+設計も同様で、例えばコードが読みやすいかどうかは感覚的な問題となる。  
+つまり、読みやすさについて改善前と改善後を見比べて、初めて良さを実感できる物である。  
+実際に手を動かして、コードの見通しが良くなった、重複コードが減った、といった実感を仲間と共有して見よう。  
+
+その際、プロダクションコードを用いての改善実験をお勧めする。  
+架空の仕様やコードを用いるのも良いかもしれないが、複雑さや無秩序さ、泥臭さはプロダクションコードに及ばない。  
+複雑で無秩序なコードを、シンプルで秩序あるコードに改善することで、設計のありがたみをより実感できる。  
+
+---
+
+### 16.5.4 フォローアップ勉強会を開いてみよう
+
+仲間の輪をより大きくするために、設計の勉強会を開催してみよう。  
+始めは読書会形式で本書のような設計本を読み合わせるのが良いが、先述のように、やはり実際に手を動かしてコードを改善してみるのが効果的である。  
+インプットよりもアウトプットのほうが学習効果が高いと言われているので猶更。  
+
+- おすすめの勉強会の流れ  
+  1. 本に書かれているノウハウを1,2個程度読み合わせる。  
+  2. ノウハウを適用できそうな箇所を、プロダクションコードの中から探す。  
+     参加者それぞれが普段触っているコードであればとっつきやすくて良い。  
+  3. ノウハウを使ってコードを改善してみる。  
+  4. どう改善したかについて、before,afterがわかるように発表する。  
+  5. 発表内容について質疑応答や議論をする。  
+
+この勉強会を、1回1時間程度、スモールステップで繰り返していく。  
+こうすることで、インプット、アウトプット、フィードバックを素早く回す事ができ、効果的に記憶に定着する。  
+また、設計に対する意識付けと認知度が向上する。  
+
+---
+
+### 16.5.5 勉強会のバッドノウハウ
+
+勉強会のやり方によっては、あまり効果を得られなかったり、イメージダウンしてしまったりするので注意が必要。  
+まず、本の読み合わせ「だけ」をするのはお勧めしない。  
+アウトプットが伴わず、学習効果が低いため。  
+また、一度に大量にインプットだけしても、忙しい仕事の中では、人はすぐに忘れてしまう。  
+
+先述のように、コードを改善して実際に良くなった感覚を得るのが重要となる。  
+インプットだけだと実感が伴わず、「ほんとにこれ役に立つの？実際の開発に使えるのか怪しいんだけど」と、参加者は不安や疑念を抱いてしまう。  
+もっとひどくなると「あれは理想論、使い物にならない」と失望されてしまう。  
+「これが正しい設計手法だ!すぐに受け入れろ!」と言わんばかりに、これ間の実装を頭ごなしに否定するのも良くない。  
+
+設計に限らず、新しい技術を取り入れる際は、ついつい既存のスタイルを否定しがちになってしまうが、それは悪手である。  
+人にはプライドがある。  
+成果物を否定された良い気分はしないものだ。  
+
+不信感が大きくなれば、そもそも話すら聞いてもらえなくなる。  
+設計の輪を広げるどころではなくなってしまう。  
+そうならないためには、相手の意見に共感したり、尊重したりする姿勢が重要となる。  
+そのうえで少しずつ課題と解決方法について冷静に議論し、話の歩みを寄せていくべし。  
+よく話してみたら、例えばパフォーマンス上の課題があり、新しい設計手法を適用するにも出来なかった、というケースも時にはあったりする。  
+
+ここまで意見共有できて、初めて同じ目線で設計課題をどうしようか、と一緒に考えていける。  
+考えが異なる人と目線を合わせるのは中々骨が折れるものだ。  
+しかし、目線にギャップがある状態で無理に話を通そうとするとお互いが不幸になる。  
+
+中々設計の考えが広まらないことに対して、時には焦りやいらだちを覚えることもあるだろう。  
+しかし、ここは忍耐だ。  
+
+ソフトウェアの変更容易性に課題があるのは、これまで悪魔に例えてきたように変更容易性に関する設計が認知されていない事が大きな原因の一つである。  
+あるべき構造と効果を知らないと悪魔には見えないものなのだ。  
+
+勉強会においても、設計技術をいきなり無理に教え広めるのではなく、徐々に伝えていくべきである。  
+変更容易性という品質特性がある、そして変更容易性を向上させる設計技術があることを認知させる程度の方が、入っていきやすいだろう。  
+
+---
+
+### 16.5.6 リーダーやマネージャーに設計と費用対効果の話をする
+
+変更容易性ｎテコ入れできず、低下の一途を辿ってしまう組織的な問題は、そもそも開発リソース(予算、計画)に変更容易性に関する設計コストが盛り込まれていない事が主たる要因である。  
+盛り込まれない理由として、予算や計画を決めるメンバー、すなわちチームリーダーやマネージャーや特に経営層の頭脳に、変更容易性に関する知識がインプットされていないケースが考えられる。  
+
+組織として設計品質を向上させるには、やはり開発プロセスの流れに設計を組み込む必要がある。  
+そのためには、リーダーやマネージャーと設計意識の共有が必須となる。  
+プロセスに正式に認められていないと、他の仕事を優先するよう支持されるなど、何かと動きにくいものだ。  
+
+マネージャーには、費用対効果を中心に話を持っていくべし。  
+マネージャーは、チームに割り当てられた予算を用いて、どのように投資し、利益を最大化するかに責任を追っているためである。  
+費用対効果は彼らの最大の関心事である。  
+
+開発効率低下の問題と、問題解決のための設計業務があることを伝えるべし。  
+そして設計が必要な投資コストであることを説明すべし。  
+一方マネージャーからすれば、設計コストがどれぐらい高くつくのか気になるところとなる。  
+毎日の開発業務の中で、スモールステップで遂行するものであることを説明しよう。  
+仕様変更の頻度が高い領域に絞って、集中的かつ効果的ンい変更容易性個以上を狙う設計であることを伝えよう。  
+
+マネージャーへ説明する際は、1人ではなく仲間と一緒であることが望ましい。  
+これまで仲間内でやってきた設計活動とその実績も交えて説明すると、より説得力が上がるだろう。  
+
+---
+
+### 16.5.7 設計責任者を立てる
+
+開発メンバーの多くが設計品質を良くしていく積極性があれば、品質向上のための様々な取り組みが自然となされていくものだ。  
+しかし、そうではない場合、設計責任者を立てることをお勧めする。  
+設計責任者は変更容易性の品質向上のため、以下を推進していくものとする。  
+
+- 設計品質に関わるルールや開発プロセスの策定  
+- ルールの周知、教育  
+- リーダー・マネージャー層への共有  
+- 品質の可視化  
+- 設計品質の維持  
+
+設計方針やコーディングルール、レビュー方法など、設計品質に関わるルールや開発プロセスを策定仕様。  
+ルールはほおっておくと形骸化する。  
+なぜルールが必要なのか、理由を必ず併記しよう。  
+
+ルールを策定しても、守られなければ意味がない。  
+開発メンバーに周知徹底しよう。  
+必要であれば勉強会を開催するなど、教育的な業務も執り行うべし。  
+ルールは一度ではなかなか伝わらない。  
+繰り返し伝えていくことが大切となる。  
+
+また、開発メンバーだけでなく、リーダーやマネージャーに対しても、日ごろから設計と開発コストについて意思共有を怠らないようにしよう。  
+変更容易性は、とかく認知が困難である。  
+困難だからこそ、忘れ去られないよう定期的に伝え、意思共有していくことが大事となる。  
+
+設計品質向上に寄与するツールを導入しよう。  
+品質を可視化し、品質向上を効率化する。  
+導入には当然コストがかかるため、必要な開発環境であることをマネージャーに説明しよう。  
+
+設計品質の劣化は仕様変更時に発生する。  
+仕様変更に伴う品質劣化が生じないように取り計らうのも設計責任者の仕事となる。  
+例えば、設計的に無理のある仕様変更が、ビジネスサイドからインプットされることが度々あるだろう。  
+ビジネスサイドからは設計品質が見えないことがほとんどであるため、ある意味当然といえば当然である。  
+だからこそ、設計責任者は設計品質を守る責任がある。  
+懸念のある仕様変更は、設計上どのような課題が生じるかについてビジネスサイドに伝えよう。  
+課題解決のための落とし所をお互いに模索しよう。  
+時には仕様変更を断る勇気も必要となる。  
+
+ところで、誰が設計責任者になれば良いのだろうか。  
+チーム内に相応しい人物がいないなら、責任者となるのは他でもない、あなただと考える。  
+あなたは、少なくとも設計に関して課題を感じ、危機意識を持っているものと思われる。  
+是非、設計責任者として立候補し、開発力の向上に貢献してほしいと願う。  
