--- a/GoodCode,BadCode/17.設計技術の理解の深め方.md
+++ b/GoodCode,BadCode/17.設計技術の理解の深め方.md
@@ -1,1 +1,142 @@
 # 17. 設計技術の理解の深め方
+
+## 17.1 さらにステップアップするための設計技術書
+
+- 現場で役立つシステム設計の原則～変更を楽で安全にするおオブジェクト指向の実戦技法  
+- リーダブルコード - より良いコードを書くためのシンプルで実戦的なテクニック  
+- リファクタリング 既存のコードを安全に改善する(第2版)  
+- CleanCode アジャイルソフトウェア達人の技  
+- レガシーコード改善ガイド  
+- レガシーソフトウェア改善ガイド  
+- レガシーコードからの脱却 - ソフトウェアの寿命を伸ばし価値を高める9つのプラクティス  
+- エンジニアリング組織論への招待 ～ 不確実性に向き合う指向と組織のリファクタリング  
+- プリンシパル オブ プログラミング 3年目までに身に着けたい一生役立つ101の原理原則  
+- Clean Architecture 達人に学ぶソフトウェアの構造と設計  
+- エリック・エヴァンスのドメイン駆動設計  
+- セキュア・バイ・デザイン 安全なソフトウェア設計  
+- ドメイン駆動設計入門 ボトムアップでわかる!ドメイン駆動設計の基本  
+- ドメイン駆動設計 モデリング/実践ガイド  
+- ドメイン駆動設計 サンプルコード&FAQ  
+- テスト駆動開発  
+
+---
+---
+
+## 17.2 設計スキルを高める学び方
+
+- インプットは2、アウトプットは8  
+- 設計効果を必ず意識すること  
+
+---
+
+### インプットは2、アウトプットは8
+
+1つ目の指針は、インプットよりアウトプットを重視する事。  
+インプットを2としたら、8ぐらいの割合でアウトプットする。  
+これは設計に限らず、学習に関して広く言える。  
+
+例えば自転車の乗り方を一生懸命本で勉強しても乗れません。  
+実際に乗って練習し、バランスの取り方等を体で覚える必要があります。  
+サービス開発可能な実戦的なプログラミングスキルを身につけるには、プログラミング言語の入門書を読んだだけでは困難。  
+実際に機能要件を自分でかみ砕き、要件を満たすロジックを考えて組んでいく経験が必要。  
+
+同様に、設計も本を読むだけでは中々理解が進まない。  
+実際に手を動かして試行錯誤する経験を得て、初めて大幅なスキルアップを望める。  
+
+1つ新しい事を学んだら、すぐにコードを書いて自分なりに色々考え試行錯誤すべし。  
+
+---
+
+### 設計効果を意識する
+
+2つ目の指針は、設計の前後で必ず効果(設計効果)を確認すること。  
+
+例えば、ストラテジーパターンは条件分岐の重複コードを削減んする効果がある。  
+ストラテジーパターンを使うなら、適用するコードが抱える課題とストラテジーパターンの効果が一致するかを確認する。  
+
+設計適用後、本当に効果が得られたかどうかを確認する。  
+思った効果がいまいち得られていないのであれば、何が問題なのか、どう工夫すれば良いか考える。  
+さらに改善を積み重ねられ、設計の理解が深まる。  
+
+一番よくないのは、設計効果を対して意識せず、構造だけをまねて満足してしまうこと。  
+問題解決にならないばかりか、逆に構造を複雑にしてしまって、問題が深刻化する場合すらあり得る。  
+聞きかじった程度の設計パターンを意味もなく適用して複雑化しているケースが結構多く見られる。  
+
+以上、2つの指針に基づき、次に示す方法で学びを深める。  
+
+---
+
+### 悪魔の構造を見破る練習
+
+より良い設計に使用とするモチベーション、危機感を高めるには、どこに悪魔が潜んでいるのか見破る目を養うことが第一歩。  
+内容と照らし合わせながら、普段開発に携わっているプロダクションコードを眺めてみよう。  
+構造的に良くない箇所はどこか、なぜよくないのか分析する練習を積もう。  
+先に紹介した書籍「リファクタリング」や「CleanCode」を読めば、「悪魔の正体を見破る目」をさらに増やす事ができる。  
+
+---
+
+### リファクタリングで大幅スキルアップ
+
+設計スキルを大幅に高める方法はリファクタリング。  
+リファクタリングの練習題材にするのは、普段仕事で使っているプロダクションコード。  
+プロダクションコードは泥臭い複雑さを抱えている。  
+だからこそ、実戦レベルで使える設計力を養える。  
+
+リポジトリからローカルにプロダクションコードをチェックアウトし、練習用にブランチを切る。  
+このブランチでリファクタリングの練習をする。  
+練習用なので、製品ブランチにマージしてはいけない。  
+
+次にリファクタリングの対象を選ぶ。  
+行数の多いメソッドやpublicメソッドは難易度が高いので避ける。  
+大抵は他の様々なクラスやメソッドに依存している度合いが高いため。  
+行数の少ないprivateメソッドやstaticメソッドが、ちょうど良い練習題材になる。  
+publicメソッドと違い、他との依存が小さいため。  
+
+例えば、早期リターンやファーストクラスコレクションを用いてネストを解消するなど、色々試してみるべし。  
+何かの計算をしてローカル変数に格納しているロジックがあれば、そのローカル変数の値をインスタンス変数とする値オブジェクトを設計してみるべし。  
+そして、値オブジェクトに計算ロジックを移動してみるべし。  
+
+繰り返しになるが、アウトプットが重要となる。  
+とにかく数をこなすことが大事。  
+また、意図した効果が得られているかを必ず確認する。  
+
+構造変更の練習だけ出来れば良いため、テストコードを書く必要は特にない。  
+テストコードを使った本番差ながらのリファクタリングを練習れすれば、さらにスキルアップが望める。  
+
+---
+
+### 動くコードを書いたら、設計しなおしてからコミット
+
+開発時に設計スキルを高め、かつ品質の高いコードをコミットする方法となります。  
+
+コードを書く前にある程度設計してもいいが、まずは動くコードを早く書く事をお勧めする。  
+時間を書けて慎重に設計しても、いざコードに落とし込んでみると、動作に不可欠な要素を見落としているケースが多々あるためである。  
+
+動作するコードを実装出来たら、そのままコミットしてはいけない。  
+そこからあるべき構造を設計しなおす。  
+動作に必要な値、計算ロジック、分岐ロジックが動くコードから得られる。  
+それら動作に必要な要素をメモ帳などにメモしておく。  
+メモしておいた要素を用い、今度は変更容易性を考慮したクラスとして設計する。  
+そして、最初に雑に書いたコードの代わりに、新たに作ったクラスを組み込む。  
+動作に問題がなければコミットする。  
+
+このようにすることで、品質の高いコードをコミットできるし、実戦レベルの設計スキルも向上する。  
+
+---
+
+### 設計技術書でさらなる高みを目指そう
+
+設計がうまくいくと楽しくなってくるもの。  
+その時こそ、成長のチャンスとなる。  
+先に上げた技術書を入手し、学びを深めるべし。  
+
+書籍「リファクタリング」や「レガシーコード改善ガイド」は、ケースに応じた対応方法がカタログ的に記述されている。  
+そのため、通読しなくても、使いたい手法をお手軽に拾い読みしてすぐに試すことができる。  
+繰り返しになるが、アウトプットを重視し、読んだらすぐに手を動かして試行錯誤すべし。  
+そして設計の効果を確認すべし。  
+
+書籍「ドメイン駆動設計」は、ソフトウェアを長期的に成長させる、価値の高い設計知見にあふれている。  
+難解ではあるが、関連する入門書が色々出版されており、サポートが豊富。  
+ドメイン駆動設計も、手を動かし、様々な試行錯誤を得て理解が深まる。  
+
+設計力を高め、悪魔に苦しめられず、快適に楽しく開発していける世界を目指していこう。  
