--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -47,11 +47,13 @@ OPERATION | SQL    | HTTP/REST
 ----------+--------+-----------
 CREATE    | INSERT | POST
 READ      | SELECT | GET
-UPDATE    | UPDATE | PUT
+UPDATE    | UPDATE | PUT/PATCH
 DELETE    | DELETE | DELETE
 ```
 
 [Repository Pattern](https://www.youtube.com/watch?v=x6C20zhZHw8)  
+
+---
 
 ## PUTとPATCHの違い
 
