--- a/DB_SQL/Window/サンプル/分母分子2.md
+++ b/DB_SQL/Window/サンプル/分母分子2.md
@@ -168,15 +168,15 @@ FROM(
 ``` sql
 SELECT
     ReservationFrameNo,
-    [SQ].[Numerator] + '/' + [SQ].[Denominator] + CASE WHEN COUNT(*) > 1 THEN '+' ELSE '' END  AS [FrameCount]
+    [Numerator] + '/' + [Denominator] + CASE WHEN COUNT(*) > 1 THEN '+' ELSE '' END  AS [FrameCount]
 FROM (
     SELECT
-        [A].ReservationFrameNo,
-        [A].ReservationNo,
+        [SQ_Numerator].ReservationFrameNo,
+        [SQ_Numerator].ReservationNo,
         CONVERT(nvarchar,[SQ_Numerator].[Numerator]) AS [Numerator],
         CONVERT(nvarchar,[SQ_Denominator].[Denominator]) AS [Denominator]
     FROM (
-   -- 予約枠を上から見ていった時のシーケンス(分子:Numerator)
+    -- 予約枠を上から見ていった時のシーケンス(分子:Numerator)
         SELECT
             [ReservationFrameNo],
             [ReservationNo],
@@ -185,9 +185,9 @@ FROM (
             [ReservationPlayer]
         GROUP BY
             ReservationFrameNo,ReservationNo
-        ) AS [A]
+        ) AS [SQ_Numerator]
     JOIN (
-   -- 予約が持っている予約枠数(分母:Denominator)
+    -- 予約が持っている予約枠数(分母:Denominator)
         SELECT
             [ReservationNo],
             COUNT(DISTINCT [ReservationFrameNo]) AS Denominator
@@ -195,8 +195,8 @@ FROM (
             [ReservationPlayer]
         GROUP BY 
             [ReservationNo]
-    ) AS [B]
-    ON [A].ReservationNo = [B].ReservationNo
+    ) AS [SQ_Denominator]
+    ON [SQ_Numerator].ReservationNo = [SQ_Denominator].ReservationNo
 ) AS [SQ]
 GROUP BY
     [ReservationFrameNo]
